# openway

./: .clang-format  CMakeLists.txt  build-requirements.txt
.github/workflows/: build-and-test.yml  build.yml  cmake.yml
data/shaders/: fullscreen.frag  fullscreen.vert
include/openway/: common.hpp  log.hpp  voxel_octree.hpp
include/openway/gl/: call.hpp  descriptor.hpp  framebuffer.hpp  gl_object.hpp  glad_session.hpp  glfw_session.hpp  renderbuffer.hpp  shader.hpp  shader_program.hpp  texture.hpp  uniform.hpp  vao.hpp  vbo.hpp
include/openway/graphics/: camera.hpp  drawable.hpp  fullscreen_pass.hpp  fullscreen_triangle.hpp  mesh.hpp  orthographic_camera.hpp  perspective_camera.hpp  render_pass.hpp
include/openway/io/: input_state.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/openway/utility/: debug.hpp  log.hpp  timer.hpp  to_string.hpp
src/: main.cpp
src/openway/: debug.cpp  log.cpp  voxel_octree.cpp
src/openway/gl/: glad_session.cpp  glfw_session.cpp  shader.cpp  shader_program.cpp
src/openway/graphics/: camera.cpp  fullscreen_pass.cpp  fullscreen_triangle.cpp  mesh.cpp  orthographic_camera.cpp  perspective_camera.cpp  render_pass.cpp
src/openway/io/: keyboard.cpp  mouse.cpp  tinyobjloader.cpp  window.cpp
src/openway/utility/: debug.cpp  log.cpp  timer.cpp
